# a_topdown_shooter

./: .gitignore  Cargo.toml  Makefile.toml  readme.md
.cargo/: config.toml
assets/: dynamic_assets.assets
assets/localization/: en-US.ftl
src/: camera.rs  input.rs  lib.rs  localization.rs  main.rs
src/input/: cursor_position.rs  mod.rs
src/localization/: languages.rs  mod.rs
