[package]
name = "space_bees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }

# Bevy plugins
leafwing-input-manager = "0.7.1"
bevy_asset_loader = { version = "0.14.1", features = ["standard_dynamic_assets"] }

# Other dependencies
tracing = "0.1.37"
fluent = "0.16.0"
unic-langid = { version = "0.9.0" }
intl-memoizer = "0.5.1"
color-eyre = "0.6.2"
thiserror = "1.0.37"
itertools = "0.10.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
